name:                typesafe-containers
version:             0.1
synopsis:            Type-safe containers.
description:         Please see README.md
homepage:            https://github.com/fizruk/typesafe-containers#readme
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2016 Nickolay Kudasov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Safe.Map
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fizruk/typesafe-containers
