name:                typesafe-containers
version:             0.1
synopsis:            Type-safe containers.
description:         Please see README.md
homepage:            https://github.com/fizruk/typesafe-containers#readme
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay.kudasov@gmail.com
copyright:           2016 Nickolay Kudasov
category:            Web
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:  -Wall -Wno-unticked-promoted-constructors
  hs-source-dirs:      src
  exposed-modules:
    Data.Safe.Map
    Data.Safe.Map.Schema
    Data.Safe.Internal.Map
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite doctest
  ghc-options:      -Wall
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.11 && <0.12,
    filepath
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          DocTest.hs
  type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/fizruk/typesafe-containers
